<resources>
    <string name="app_name">Rent a Maid Dev</string>
    <string name="job_detail">Auftragsdetail</string>
    <string name="project_detail">Projektdetail</string>
    <string name="start_work_time">Arbeitsbeginn</string>
    <string name="end_work_time">Arbeitsendzeit</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Es scheint, dass die App nicht mit dem Internet verbunden ist. Überprüfen Sie bitte Ihre Internetverbindung.</string>
    <string name="no_internet_splash">Es scheint, dass die App nicht mit dem Internet verbunden ist. Überprüfen Sie bitte Ihre Internetverbindung.Bitte schließen und wieder öffnen.</string>
    <string name="network_error">Netzwerkfehler, könnte Daten erhalten, bitte versuchen Sie es erneut!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Anmeldung</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="invalid_username">Ungültige E-Mail Adresse</string>
    <string name="invalid_password">Das Passwort muss> 4 Zeichen lang sein</string>
    <string name="invalid_username_and_password">Bitte überprüfen Sie Ihre E-Mail-Adresse und Ihr Passwort</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">password</string>
    <string name="test_email">santhose@gmail.com</string>
    <string name="welcome_back">Willkommen zurück!</string>
    <string name="login_to_continue">Melden Sie sich an, um fortzufahren.</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="user_name">Username</string>
    <string name="user_email">E-Mail Adresse</string>
    <string name="password">Passwort</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="login">LOGIN</string>
    <string name="project_name">Projektname</string>
    <string name="rent_a_maid">Rent a maid</string>
    <string name="client_name">Santhose Palanisamy</string>
    <string name="client_description">He is a perfect maid. Good co-worker. 3 years of working experience</string>
    <string name="team_leader_tl">Team Leader (TL)</string>
    <string name="start">Start</string>
    <string name="end">Beenden</string>
    <string name="tap_to_pause">PAUSE</string>
    <string name="tap_to_resume">FORTSETZEN</string>
    <string name="travel_time">Fahrtzeit</string>
    <string name="work_time">Arbeitszeit</string>
    <string name="zeros">000</string>
    <string name="assigned_tasks">Zugeordnete Projekte</string>
    <string name="team">Team:</string>
    <string name="location">Projektort:</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="all_tasks">All Tasks</string>
    <string name="team_lead"><b><i> [TL]</i></b></string>
    <string name="team_leader">Team Lead</string>
    <string name="project">Projekt</string>
    <string name="hrs">Uhr</string>
    <string name="drive_time_start_ideal">Fahrtzeit Beginn:</string>
    <string name="work_starts_at_location">Arbeitsbeginn:</string>
    <string name="home">Startseite</string>
    <string name="project_details">Projektdetails</string>
    <string name="account_details">Kontodaten</string>
    <string name="title_travel_start_time">Anfahrt</string>
    <string name="title_travel_end_time">Am Ziel</string>
    <string name="action_stop">STOP</string>
    <string name="action_start">START</string>
    <string name="msg_start_work_time">Arbeitsbeginn</string>
    <string name="msg_end_work_time">Arbeitsendzeit</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_confirm">Bestätigen</string>
    <string name="title_time_stamp">Zeitstempel</string>
    <string name="title_stamp_in">Einstempeln</string>
    <string name="title_stamp_off">Abstempeln</string>
    <string name="title_are_you_there">Bist Du am Ziel?</string>
    <string name="title_end_of_work">Feierabend?</string>
    <string name="msg_leave_comments">Kommentare hinterlassen</string>
    <string name="title_msg_travel_time">Soll die Fahrzeit jetzt eingestellt werden?</string>
    <string name="title_next">Zum Arbeitszeitstempel</string>
    <string name="title_is_working">is Running</string>
    <string name="permission_required_title">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="msg_km">k.m.</string>
    <string name="permission_required_message">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="please_grant_permission_write">please grant write file permission and try again</string>
    <string name="msg_offline">Du bist offline</string>
    <string name="msg_on_gps">Schalten Sie GPS ein</string>
</resources>