<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDahHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/colorOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.task.utils.font.CustomFontTextViewBold
            android:id="@+id/textDahHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAliceBlue"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDahMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/constraintDahHeader">

        <com.task.utils.font.CustomFontTextViewMedium
            android:id="@+id/textDahMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/title_msg_travel_time"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.task.utils.font.CustomerEdittextViewMedium
            android:id="@+id/editDahComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:backgroundTint="@color/colorLightGrey"
            android:hint="@string/msg_leave_comments"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|textNoSuggestions|textCapWords"
            android:lines="3"
            android:maxLines="10"
            android:paddingBottom="@dimen/_10sdp"
            android:singleLine="false"
            android:text=""
            android:textColor="@color/colorCharcoal"
            android:textColorHint="@color/colorLightGrey"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/constraintDahMessage">


        <com.task.utils.font.CustomButtonMedium
            android:id="@+id/textDahPositiveAction"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_radius"
            android:gravity="center"
            android:text="@string/action_confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorCharcoal"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toEndOf="@+id/textDahNegativeAction"
            app:layout_constraintTop_toTopOf="parent" />

        <com.task.utils.font.CustomButtonMedium
            android:id="@+id/textDahNegativeAction"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_radius"
            android:gravity="center"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorCharcoal"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textDahPositiveAction"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>